# Multithreaded_Web_Crawler

./: CMakeLists.txt  README.md  RUN.txt  crawled_pages.csv  fix.py  metrics.csv  pagerank_results.csv  project_deep_dive.md  project_deep_dive_v2.md  synthetic_server.py  urls.txt
include/: DumpUtils.h  benchmark_runner.h  crawler_config.h  downloader.h  instrumented_mutex.h  metrics_collector.h  parser.h  storage_manager.h  thread_manager.h  url_frontier.h
outputs/analysis/: pagerank.csv
outputs/crawl/: frontier_dump.txt  thread_0_buffer.txt  thread_1_buffer.txt  thread_25_buffer.txt  thread_2_buffer.txt  thread_3_buffer.txt  visited_urls.txt
outputs/graph/: domain_stats.csv  edge_list.csv
src/: DumpUtils.cpp  benchmark_runner.cpp  crawler_config.cpp  downloader.cpp  main.cpp  metrics_collector.cpp  parser.cpp  storage_manager.cpp  thread_manager.cpp  url_frontier.cpp
